--- a/pipelines/supra-snmp-fw.yml
+++ b/pipelines/supra-snmp-fw.yml
@@ -10,17 +10,31 @@ input {
     # 1.3.6.1.4.1.12356.118.2.1.2.1.14 -> fwnWanOutOctets64    [table]
     # 1.3.6.1.4.1.12356.118.1          -> fgSystemInfo         [walk]
 
-    #### SINGLE OID
+    ############################# SINGLE OID################################
     snmp {
     hosts => [{ host => "udp:8.8.8.8/161" community => "logstash" version => "2c" retries => 2 timeout => 1000}]
     walk => ["1.3.6.1.4.1.12356.118.1"]
     interval => 60
     }
 
-    #### TABLES
+    ############################# TABLES ###################################
+    #No funciona ---> tables => [ {"name" => "fwnWanEntry" "columns" => ["1.3.6.1.4.1.12356.118.2.1.2.1.2", "1.3.6.1.4.1.12356.118.2.1.2.1.3", "1.3.6.1.4.1.12356.118.2.1.2.1.4","1.3.6.1.4.1.12356.118.2.1.2.1.13","1.3.6.1.4.1.12356.118.2.1.2.1.14"]} ]
+    #timeout => 1000
     snmp {
-    hosts => [{ host => "udp:8.8.8.8/161" community => "logstash" version => "2c" retries => 2 timeout => 1000}]
-    tables => [ {"name" => "split_field" "columns" => ["1.3.6.1.4.1.12356.118.2.1.2.1.2", "1.3.6.1.4.1.12356.118.2.1.2.1.3", "1.3.6.1.4.1.12356.118.2.1.2.1.4","1.3.6.1.4.1.12356.118.2.1.2.1.13","1.3.6.1.4.1.12356.118.2.1.2.1.14"]} ]
+    hosts => [{ host => "udp:8.8.8.8/161" community => "logstash" version => "2c" retries => 2}]
+    tables => [ {"name" => "split_field" "columns" => ["1.3.6.1.4.1.12356.118.2.1.2.1.3","1.3.6.1.4.1.12356.118.2.1.2.1.2"]} ]
+    interval => 60
+    }    
+    
+    snmp {
+    hosts => [{ host => "udp:8.8.8.8/161" community => "logstash" version => "2c" retries => 2}]
+    tables => [ {"name" => "split_field" "columns" => ["1.3.6.1.4.1.12356.118.2.1.2.1.13","1.3.6.1.4.1.12356.118.2.1.2.1.2"]} ]
+    interval => 60
+    }
+    
+    snmp {
+    hosts => [{ host => "udp:8.8.8.8/161" community => "logstash" version => "2c" retries => 2}]
+    tables => [ {"name" => "split_field" "columns" => ["1.3.6.1.4.1.12356.118.2.1.2.1.14","1.3.6.1.4.1.12356.118.2.1.2.1.2"]} ]
     interval => 60
     }
 }
